# NyisBotCPP

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  channel.cpp  client.cpp  connection.cpp  loader.cpp  main.cpp  settings.cpp
client/: CMakeLists.txt  client_discord.cpp  client_discord.h  client_irc.cpp  client_irc.h  client_telegram.cpp  client_telegram.h  client_tui.cpp  client_tui.h
config/: main.defaults.conf  modules.conf
core/: CMakeLists.txt  args_parser.cpp  args_parser.h  channel.cpp  channel.h  chatcommand.cpp  chatcommand.h  client.cpp  client.h  client_irc.cpp  client_irc.h  client_tui.cpp  client_tui.h  clientrequest.h  connection.cpp  connection.h  container.cpp  container.h  framework_game.h  iimpl_basic.h  logger.cpp  logger.h  module.cpp  module.h  mutex.h  settings.cpp  settings.h  types.h  utils.cpp  utils.h
doc/: api.txt
inc/: client.h  connection.h  logger.h  module.h  settings.h
modules/: CMakeLists.txt  builtin.cpp  lua_channel.cpp  lua_settings.cpp  nbm_builtin.cpp  nbm_feeds.cpp  nbm_liar_game.cpp  nbm_lua.cpp  nbm_quotes.cpp  nbm_shithead.cpp  nbm_superior_uno.cpp  nbm_tell.cpp  nbm_timebomb.cpp
script/: fun.lua  init.lua  misc_helpers.lua
tests/: CMakeLists.txt  test.cpp  test.h  test_channel.cpp  test_chatcommand.cpp  test_connection.cpp  test_feeds.txt  test_module.cpp  test_nbm_feeds.txt  test_nbm_liar_game.txt  test_nbm_lua.txt  test_nbm_quotes.txt  test_nbm_tell.txt  test_settings.cpp  test_utils.cpp
